[project]
name = "yukinoise-users"
version = "0.1.0"
description = ""
authors = [
    {name = "PSK",email = "shaban.benito.dimitri@gmail.com"}
]
packages = [
    {include = "yukinoise_users", from = "src"}
]
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "yukinoise-auth @ git+https://github.com/PSKonch/yukinoise-auth",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "temporalio (>=1.20.0,<2.0.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=3.4.0,<4.0.0)",
    "black (>=25.12.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
files = ["src/yukinoise_users"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
follow_imports = "silent"
show_error_codes = true



[dependency-groups]
dev = [
    "mypy (==1.19.1)"
]
